[package]
name = "spectree"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
tempfile = "3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-log = "0.2"
anyhow = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
nutype = { version = "0.5", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
shell-escape = "0.1"

[[bin]]
name = "spectree"
path = "src/main.rs"

[[bin]]
name = "test-runner"
path = "src/test_runner.rs"